Removed unnecessary lines of code.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Agnasarp Department Microservice</description>
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <!--<spring-cloud.version>2020.0.1</spring-cloud.version>-->
     </properties>
     <dependencies>
         <dependency>
@@ -47,14 +47,9 @@
         </dependency>
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
-            <version>3.0.1</version>
-        </dependency>-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
@@ -63,7 +58,7 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>-->
     </dependencies>
-    <dependencyManagement>
+    <!--<dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -73,7 +68,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
     <build>
         <plugins>
