--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 8280
 
-spring:
-  application:
-    name: DEPARTMENT-SERVICE
-    cloud:
-      config:
-        enabled: true
-        uri: http://localhost:8580
-  zipkin:
-    base-url: http://127.0.0.1:9411/
+#spring:
+#  application:
+#    name: DEPARTMENT-SERVICE
+#    cloud:
+#      config:
+#        enabled: true
+#        uri: http://localhost:8580
+#  zipkin:
+#    base-url: http://127.0.0.1:9411/
 
 #eureka:
 #  client:
