--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Agnasarp Department Microservice</description>
     <properties>
         <java.version>1.8</java.version>
-        <!--<spring-cloud.version>2020.0.1</spring-cloud.version>-->
+        <spring-cloud.version>2020.0.1</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -26,10 +26,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -58,7 +58,7 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>-->
     </dependencies>
-    <!--<dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -68,7 +68,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>-->
+    </dependencyManagement>
 
     <build>
         <plugins>
