--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
   port: 8280
 
-#spring:
-#  application:
-#    name: DEPARTMENT-SERVICE
+spring:
+  application:
+    name: DEPARTMENT-SERVICE
 #    cloud:
 #      config:
 #        enabled: true
@@ -11,11 +11,11 @@ server:
 #  zipkin:
 #    base-url: http://127.0.0.1:9411/
 
-#eureka:
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka/
-#    instance:
-#      hostname: localhost
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    instance:
+      hostname: localhost
