--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,30 @@
 server:
   port: 8280
+  error:
+    whitelabel:
+      enabled: false
 
 spring:
   application:
     name: DEPARTMENT-SERVICE
-#    cloud:
-#      config:
-#        enabled: true
-#        uri: http://localhost:8580
+    cloud:
+      config:
+        enabled: true
+        uri: http://localhost:8580
 #  zipkin:
 #    base-url: http://127.0.0.1:9411/
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#    instance:
+#      hostname: localhost
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:"*":
