email notification service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=j8fe3lvc9ugzfs3_osppocdb_medium.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+spring.datasource.username=ospcm
+spring.datasource.password=storeCesdev123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.properties.hibernate.proc.param_null_passing=true
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.hibernate.ddl-auto=none
 
 spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=truehj
-spring.sql.init.data-locations=classpath:data.sql
-spring.sql.init.schema-locations=classpath:schema.sql
 
-server.port=8086
+server.port=8090
 
-spring.application.name=department-management
+spring.application.name=order-management
