--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.poc.department</groupId>
-    <artifactId>department-management</artifactId>
+    <groupId>com.poc.order</groupId>
+    <artifactId>order-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>department-management</name>
-    <description>Department management</description>
+    <name>order-management</name>
+    <description>Order management</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
@@ -31,7 +31,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -46,6 +51,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
         </dependency>
     </dependencies>
 
@@ -76,7 +85,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>department-management</finalName>
+        <finalName>order-management</finalName>
     </build>
 
 </project>
