--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=j8fe3lvc9ugzfs3_osppocdb_medium.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
-spring.datasource.username=ospcm
-spring.datasource.password=storeCesdev123
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.proc.param_null_passing=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
